[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/TilingBG.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/Stage.gd" type="Script" id=3]
[ext_resource path="res://enemies/CarMob.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/GameUI.tscn" type="PackedScene" id=5]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.1
bottom_radius = 0.1
height = 0.1

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -1.4961, 0, -2.49685, 0, 0, 0, 0, 0, 0, 1.51024, 0, -2.48653, 0, 0, 0, 0, 0, 0, -1.4961, 0, -2.49685 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[node name="Stage" type="Node"]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Y-layers:
0- tile background
1- wave bottom
2- ground enemies
3- player
4- wave top (game over)
5- building tops, flying enemies
6- Camera"
}
car_scene = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 2 )

[node name="TilingBG" parent="." instance=ExtResource( 1 )]

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Position3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
projection = 1
current = true
size = 4.8

[node name="StreetEdges" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="StreetEdges"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -2.5 )
mesh = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="StreetEdges"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -2.5 )
mesh = SubResource( 1 )

[node name="RoadPath" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
curve = SubResource( 2 )

[node name="PathFollow" type="PathFollow" parent="RoadPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4961, 0, -2.49685 )

[node name="CarSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PedSpawnTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="GameUI" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="CarSpawnTimer" to="." method="_on_CarSpawnTimer_timeout"]
[connection signal="timeout" from="PedSpawnTimer" to="." method="_on_PedSpawnTimer_timeout"]
